--- a/E-CommerceWebApplication/Views/_ViewImports.cshtml
+++ b/E-CommerceWebApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using E_CommerceWebApplication
 @using E_CommerceWebApplication.Models
+@using E_CommerceWebApplication.Controllers
+@using E_CommerceWebApplication.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
