--- a/E-CommerceWebApplication/Views/Shared/_Layout.cshtml
+++ b/E-CommerceWebApplication/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - E_CommerceWebApplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - CurlyMagic By Amir Hanna - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
