--- a/E-CommerceWebApplication/Views/Product/Create.cshtml
+++ b/E-CommerceWebApplication/Views/Product/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@model CreateProductViewModel
 @{
+    ViewData["Title"] = "Add Product";
 }
 <h2>Add A New Product</h2>
 <hr />
@@ -14,9 +15,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OutLink"></label>
-                <input asp-for="OutLink" maxlength="250" type="text" class="form-control" />
-                <span asp-validation-for="OutLink" class="text-danger"></span>
+                <label asp-for="Price"></label>
+                <input asp-for="Price" maxlength="250" type="text" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId"></label>
@@ -27,11 +28,11 @@
 
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*            <div class="form-group">
                 <label asp-for="CreatedOn"></label>
                 <input asp-for="CreatedOn"  type="date" class="form-control" />
                 <span asp-validation-for="CreatedOn" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Description"></label>
                 <textarea asp-for="Description" class="form-control" maxlength="2500" rows="5">
