--- a/E-CommerceWebApplication/Views/Product/Edit.cshtml
+++ b/E-CommerceWebApplication/Views/Product/Edit.cshtml
@@ -22,11 +22,11 @@
 
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+           @* <div class="form-group">
                 <label asp-for="CreatedOn"></label>
                 <input asp-for="CreatedOn" type="date" class="form-control" />
                 <span asp-validation-for="CreatedOn" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Description"></label>
                 <textarea asp-for="Description" class="form-control" maxlength="2500" rows="5">
