--- a/E-CommerceWebApplication/Views/Product/Index.cshtml
+++ b/E-CommerceWebApplication/Views/Product/Index.cshtml
@@ -19,13 +19,13 @@
                     <div class="card mb-3">
                         <div class="row no-gutters">
                             <div class="col-md-2">
-                                <img src="@image" class="img-fluid" alt="News Image">
+                                <img src="@image" class="img-fluid" alt="@product.Name">
                             </div>
                             <div class="col-md-10">
                                 <div class="card-body d-flex flex-column justify-content-between h-100">
                                     <div>
                                         <h5 class="card-title">@product.Name </h5>
-                                        <h5>Author : @product.Category.Name</h5>
+                                        <h5>Category : @product.Category.Name</h5>
                                         <p class="card-text text-justify">@(product.Description.Length > 500 ? $"{product.Description.Substring(0, 500)}..." : product.Description)</p>
                                     </div>
                                     <div class="d-flex justify-content-between">
