--- a/E-CommerceWebApplication/Views/Category/Index.cshtml
+++ b/E-CommerceWebApplication/Views/Category/Index.cshtml
@@ -4,55 +4,45 @@
     string imagePath = "";
 }
 <h2 class="title">Categories</h2>
-    @if (User.IsInRole("Admin"))
-    {
-        <a class="btn btn-outline-secondary" asp-action="Create">Add New Category</a>
+@if (User.IsInRole("Admin"))
+{
+    <a class="btn btn-primary" asp-action="Create">Add New Category</a>
+}
 
-    }
-<a class="btn btn-outline-secondary" asp-action="Create">Add New Category</a>
 <hr />
+
 @if (Model.Any())
-{ 
-  
-    <div class="row content">
-       
-        @for (int i = 0; i < Model.Count; ++i)
+{
+    <div class="row">
+        @foreach (var category in Model)
         {
-            imagePath = CategoryController.CategoryPhotoRootPath + Model[i].ImageURL;
-                    <div class="carddd">
-                        <div class="info">
-                            <h3>@Model[i].Name</h3>
-
+            imagePath = CategoryController.CategoryPhotoRootPath + category.ImageURL;
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="card">
+                    <div class="zoom-effect">
+                        <img class="card-img-top zoom-out" src="@imagePath" alt="@category.Name">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">@category.Name</h3>
+                        <p class="card-text">@category.Description</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <a asp-action="Details" asp-route-id="@category.Id" class="btn btn-outline-secondary">Details</a>
+                            <a asp-action="ViewAllProducts" asp-route-id="@category.Id" class="btn btn-outline-secondary">View All</a>
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <a asp-action="Edit" asp-route-id="@category.Id" class="btn btn-outline-secondary">Edit</a>
+                                <a asp-action="Delete" onclick="return confirm('Are you sure you want to delete @category.Name?')" class="btn btn-danger" asp-route-id="@category.Id">Delete</a>
+                            }
                         </div>
-                        <div class="project-image">
-                            <img class="carddd-icon" src="@imagePath" asp-append-version="true"  />
-                        </div>
-                        <div class="info">
-                            <p>@Model[i].Description</p>
-                        </div>
-                    <div class="justify-content-between">
-                            <a asp-action="Details" asp-route-id="@Model[i].Id" class="btn btn-secondary">Details</a>
-                            <a asp-action="ViewAllProducts" asp-route-id="@Model[i].Id" class="btn btn-secondary">View All</a>
-                        @*@if (User.IsInRole("Admin"))
-                        {*@
-                            <a asp-action="Edit" asp-route-id="@Model[i].Id" class="btn btn-secondary">Edit</a>
-                            <a asp-action="Delete"
-                        onclick="return confirm('Are you sure you want to delete @Model[i].Name ?')" 
-                        class="btn btn-danger"
-                                asp-route-id="@Model[i].Id">Delete</a>
-                        @*}*@
-                        
-                        </div>
+                    </div>
+                </div>
             </div>
-        
         }
-        </div>
-
+    </div>
 }
 else
 {
-    <div class="p-2">
-        <h2 class="alert-warning"> No Categories Found !</h2>
-    </div>
+    <div class="alert alert-warning mt-4">No Categories Found!</div>
 }
-
