--- a/E-CommerceWebApplication/Views/Product/Create.cshtml
+++ b/E-CommerceWebApplication/Views/Product/Create.cshtml
@@ -5,60 +5,50 @@
 <h2>Add A New Product</h2>
 <hr />
 
-<section class="row justify-content-between">
+<div class="row justify-content-between">
     <div class="col-md-6">
         <form method="post" asp-action="Create" enctype="multipart/form-data">
             <input type="hidden" asp-for="ID" />
-            <div class="form-group">
-                <label asp-for="Name"></label>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Name">Name</label>
                 <input asp-for="Name" maxlength="250" type="text" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Price"></label>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Price">Price</label>
                 <input asp-for="Price" maxlength="250" type="text" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CategoryId"></label>
-                <select class="form-control" asp-for="CategoryId"
-                        asp-items="@(new SelectList(Model.Categories,"Id","Name"))">
+            <div class="mb-3">
+                <label class="form-label" asp-for="CategoryId">Category</label>
+                <select class="form-select" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories, "Id", "Name"))">
                     <option></option>
                 </select>
-
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
-@*            <div class="form-group">
-                <label asp-for="CreatedOn"></label>
-                <input asp-for="CreatedOn"  type="date" class="form-control" />
-                <span asp-validation-for="CreatedOn" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <label asp-for="Description"></label>
-                <textarea asp-for="Description" class="form-control" maxlength="2500" rows="5">
-
-                 </textarea>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Description">Description</label>
+                <textarea asp-for="Description" class="form-control" maxlength="2500" rows="5"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="custom-file">
-                <input type="file" class="custom-file-input" asp-for="Image" />
-                <label class="custom-file-label" asp-for="Image"></label>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Image">Image</label>
+                <input type="file" class="form-control" asp-for="Image" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="mt-2">
                 <button type="submit" class="btn btn-primary">
                     <i class="bi bi-check2"></i> Save
                 </button>
-                <a asp-action="index" class="btn btn-primary">
+                <a asp-action="index" class="btn btn-secondary">
                     <i class="bi bi-x-circle-fill"></i> Cancel
                 </a>
             </div>
-
         </form>
     </div>
     <div class="col-md-4">
-        <div id="poster-container" class="@(Model.ID>0?string.Empty:"d-none")">
-            @*<img src="@(Model.Id>0? $"data:image/*;base64,{Convert.ToBase64String(Model.im)}":string.Empty)" alt="Poster" class="img-thumbnail" />*@
+        <div id="poster-container" class="@(Model.ID > 0 ? string.Empty : "d-none")">
+            @*<img src="@(Model.Id > 0 ? $"data:image/*;base64,{Convert.ToBase64String(Model.im)}" : string.Empty)" alt="Poster" class="img-thumbnail" />*@
         </div>
     </div>
-</section>
+</div>
