--- a/E-CommerceWebApplication/Views/Product/Edit.cshtml
+++ b/E-CommerceWebApplication/Views/Product/Edit.cshtml
@@ -1,86 +1,60 @@
 ﻿@model EditProductViewModel
 @{
+    ViewData["Title"] = "Edit Product";
 }
-<h2>Edit A Project</h2>
+<h2>Edit A Product</h2>
 <hr />
 
-<section class="row justify-content-between">
+<div class="row justify-content-between">
     <div class="col-md-6">
         <form method="post" asp-action="Edit" enctype="multipart/form-data">
             <input type="hidden" asp-for="ID" />
-            <div class="form-group">
-                <label asp-for="Name"></label>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Name">Name</label>
                 <input asp-for="Name" maxlength="250" type="text" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CategoryId">Category Name</label>
-                <select class="form-control" asp-for="CategoryId"
-                        asp-items="@(new SelectList(Model.Categories,"ID","Name"))" >
+            <div class="mb-3">
+                <label class="form-label" asp-for="CategoryId">Category Name</label>
+                <select class="form-select" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories, "Id", "Name"))">
                     <option></option>
                 </select>
-
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
-           @* <div class="form-group">
-                <label asp-for="CreatedOn"></label>
-                <input asp-for="CreatedOn" type="date" class="form-control" />
-                <span asp-validation-for="CreatedOn" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <label asp-for="Description"></label>
-                <textarea asp-for="Description" class="form-control" maxlength="2500" rows="5">
-
-                 </textarea>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Description">Description</label>
+                <textarea asp-for="Description" class="form-control" maxlength="2500" rows="5"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="custom-file">
-                <input type="file" class="custom-file-input" asp-for="Image" />
-                <label class="custom-file-label" asp-for="Image"></label>
+
+            <div class="mb-3">
+                <label class="form-label" asp-for="Image">Image</label>
+                <input type="file" class="form-control" asp-for="Image" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="mt-2">
                 <button type="submit" class="btn btn-primary">
                     <i class="bi bi-check2"></i> Save
                 </button>
-                <a asp-action="index" class="btn btn-primary">
+                <a asp-action="index" class="btn btn-secondary">
                     <i class="bi bi-x-circle-fill"></i> Cancel
                 </a>
             </div>
-
         </form>
-        <div class="from-group row col-sm-10 offest-4">
+        <div class="from-group row col-sm-10 offset-2 mt-4">
             <img class="img-thumbnail" src="@Model.ExistsPhotoPath" asp-append-version="true" />
         </div>
     </div>
-    <div class="col-md-4">
-        <div id="poster-container" class="@(Model.ID>0?string.Empty:"d-none")">
-            @*<img src="@(Model.Id>0? $"data:image/*;base64,{Convert.ToBase64String(Model.im)}":string.Empty)" alt="Poster" class="img-thumbnail" />*@
-        </div>
-    </div>
-</section>
+</div>
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     <script>
-        $(document).ready(function () {
-            $('#Poster').on('change', function () {
-                var selectedFile = $(this).val().split('\\').pop();
-                $(this).siblings('label').text(selectedFile);
-                var posterContainer = $('#poster-container');
-                var image = window.URL.createObjectURL(this.files[0]);
-                posterContainer.removeClass('d-none');
-                posterContainer.find('img').attr('src', image);
-            });
-            $('#Year').datepicker({
-                format: 'yyyy',
-                viewMode: 'years',
-                minViewMode: 'years',
-                autoclose: true,
-                startDate: new Date('1950-01-01'),
-                endDate: new Date()
-            });
-        });
+        function updateFileName() {
+            var fileName = document.getElementById("Image").files[0].name;
+            document.getElementById("ImageLabel").innerText = fileName;
+        }
     </script>
 }
