--- a/E-CommerceWebApplication/Views/Category/Details.cshtml
+++ b/E-CommerceWebApplication/Views/Category/Details.cshtml
@@ -2,32 +2,23 @@
 
 @{
     ViewData["title"] = "View Projects Type";
-
+    string imagePath = "~/Images/Category/" + Model.ImageURL;
 }
-<br />
-<br />
-<br />
-<br />
-<br />
 <div>
-    <div class="card-header ">
-        @Model.Name
+    <div class="card-header d-flex justify-content-center align-items-center">
+        <h4 class="mb-0">@Model.Name</h4>
     </div>
     <div class="card-body text-center">
-        <img class="card-icon" src="@Model.ImageURL" asp-append-version="true" style="width:30em;height:20em;" />
-
-
-        <h4>@Model.Description<h4>
-
+        <img class="card-icon zoom-out img-fluid" src="@imagePath" asp-append-version="true" style="max-width: 50%; height: auto;" />
+        <h4>@Model.Description</h4>
     </div>
     <div class="card-footer text-center justify-content-between">
+        <a asp-action="ViewAllProducts" class="btn btn-outline-secondary">View All Products For @Model.Name</a>
+        <a asp-action="Index" class="btn btn-outline-secondary">Back</a>
         @if (User.IsInRole("Admin"))
         {
-            <a asp-action="edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
-            <a asp-action="delete"
-            onclick="return confirm('Are You Sure You Want To Delete @Model.Name ?')" 
-            asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
+            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-secondary">Edit</a>
+            <a asp-action="Delete" onclick="return confirm('Are You Sure You Want To Delete @Model.Name ?')" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
         }
-        
     </div>
-</div> 
+</div>
