--- a/E-CommerceWebApplication/Views/Product/Create.cshtml
+++ b/E-CommerceWebApplication/Views/Product/Create.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label" asp-for="Image">Image</label>
-                <input type="file" class="form-control" asp-for="Image" />
+                <input type="file" class="form-control" asp-for="Image" onchange="previewImage"/>
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="mt-2">
@@ -52,3 +52,18 @@
         </div>
     </div>
 </div>
+@section Scripts {
+    <script>
+        function previewImage(event) {
+            var reader = new FileReader();
+            reader.onload = function () {
+                var imgElement = document.createElement('img');
+                imgElement.src = reader.result;
+                imgElement.classList.add('img-fluid');
+                document.getElementById('image-preview').innerHTML = '';
+                document.getElementById('image-preview').appendChild(imgElement);
+            };
+            reader.readAsDataURL(event.target.files[0]);
+        }
+    </script>
+}
