--- a/E-CommerceWebApplication/Views/Product/Edit.cshtml
+++ b/E-CommerceWebApplication/Views/Product/Edit.cshtml
@@ -15,7 +15,12 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label class="form-label" asp-for="CategoryId">Category Name</label>
+                <label class="form-label" asp-for="Price"></label>
+                <input asp-for="Price" maxlength="250" type="text" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" asp-for="CategoryId"></label>
                 <select class="form-select" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories, "Id", "Name"))">
                     <option></option>
                 </select>
