--- a/E-CommerceWebApplication/wwwroot/css/site.css
+++ b/E-CommerceWebApplication/wwwroot/css/site.css
@@ -37,6 +37,11 @@ h2 {
     color: #337ab7;
     margin-top: 30px;
 }
+h3 {
+    text-align: center;
+    color: #7173cb;
+    margin-top: 30px;
+}
 .zoom-effect {
     position: relative;
     overflow: hidden;
