--- a/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
+++ b/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
@@ -5,11 +5,17 @@
     string msg = "";
     if (ViewData["Products"] != null)
     {
-        msg = "Of " + ViewData["Products"]+" Category";
+        msg = "Of " + ViewData["Products"] + " Category";
+    }
+    if(ViewData["Search"] != null)
+    {
+        msg = "Of " + ViewData["Search"] + " Key";
+
     }
 }
-<h2>All Products @msg
-    
+<h2>
+    All Products @msg
+
 </h2>
 
 <hr />
@@ -26,7 +32,8 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                     <div class="card">
                         <a asp-action="Details" asp-route-id="@product.ID" asp-controller="Product">
-                        <img src="@image" class="card-img-top zoom-out zoom-effect" alt="@product.Name" style="object-fit: cover; height: 300px;"></a>
+                            <img src="@image" class="card-img-top zoom-out zoom-effect" alt="@product.Name" style="object-fit: cover; height: 300px;">
+                        </a>
                         <div class="card-body">
                             <h5 class="card-title">@product.Name</h5>
                             <h5 class="card-title">@product.Price EGP</h5>
