--- a/E-CommerceWebApplication/Views/_ViewImports.cshtml
+++ b/E-CommerceWebApplication/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using E_CommerceWebApplication.Models
 @using E_CommerceWebApplication.Controllers
 @using E_CommerceWebApplication.ViewModels
+@using E_CommerceWebApplication.Helper
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
