Cart And Invoice

--- a/E-CommerceWebApplication/Views/Shared/_Layout.cshtml
+++ b/E-CommerceWebApplication/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] | CurlyMagic</title>
+    <title>@ViewData["Title"] | GoShop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/E_CommerceWebApplication.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Curly Magic</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GoShop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
                         </li>
                     </ul>
                     <form class="d-flex" asp-controller="Product" asp-action="Search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searchKey">
+                        <input class="form-control me-2" type="search" placeholder="Search about products" aria-label="Search" name="searchKey">
                         <button class="btn btn-outline-light" type="submit">Search</button>
                     </form>
 
@@ -52,7 +52,7 @@
         <div class="container py-4">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-muted mb-0">© 2023 CurlyMagic. All rights reserved For Amir Hanna.</p>
+                    <p class="text-muted mb-0">&copy; 2023 GoShop. All rights reserved For Amir Hanna.</p>
                 </div>
                 <div class="col-md-6 text-end">
                     <a href="#" class="text-muted me-3">Terms of Service</a>
