--- a/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
+++ b/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
@@ -7,7 +7,7 @@
     {
         msg = "Of " + ViewData["Products"] + " Category";
     }
-    if(ViewData["Search"] != null)
+    if (ViewData["Search"] != null)
     {
         msg = "Of " + ViewData["Search"] + " Key";
 
@@ -47,6 +47,10 @@
                                 <a asp-action="Details" asp-controller="Product" asp-route-id="@product.ID" class="btn btn-outline-secondary">
                                     <i class="bi bi-ticket-detailed"></i>
                                     Details
+                                </a>
+                                <a asp-action="Edit" asp-controller="Product" asp-route-id="@product.ID" class="btn btn-outline-primary">
+                                    <i class="bi bi-pencil"></i>
+                                    Edit
                                 </a>
                                 <a asp-action="Edit" asp-controller="Product" asp-route-id="@product.ID" class="btn btn-outline-primary">
                                     <i class="bi bi-pencil"></i>
