--- a/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
+++ b/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
@@ -52,10 +52,11 @@
                                     <i class="bi bi-pencil"></i>
                                     Edit
                                 </a>
-                                <a asp-action="Edit" asp-controller="Product" asp-route-id="@product.ID" class="btn btn-outline-primary">
+                                <a asp-action="AddToCart" asp-controller="Cart" asp-route-id="@product.ID" class="btn btn-outline-primary">
                                     <i class="bi bi-pencil"></i>
-                                    Edit
+                                    Add To Cart
                                 </a>
+
                                 <a onclick="return confirm('Are you sure you want to delete the product @product.Name?')"
                                    class="btn btn-outline-danger"
                                    asp-action="Delete" asp-controller="Product" asp-route-id="@product.ID">
@@ -74,3 +75,26 @@
         <div mt-2 class="alert alert-warning">No products yet.</div>
     }
 </div>
+<script>
+    $(document).ready(function () {
+        $('.addToCartBtn').click(function () {
+            var productId = $(this).data('product-id');
+            addToCart(productId);
+        });
+
+        function addToCart(productId) {
+            $.ajax({
+                URL: '/Cart/AddToCart',
+                type: 'POST',
+                data: { productId: productId },
+                success: function () {
+                    // Update the UI to reflect the changes in the shopping cart
+                    alert('Product added to the shopping cart!');
+                },
+                error: function () {
+                    alert('An error occurred while adding the product to the shopping cart.');
+                }
+            });
+        }
+    });
+</script>
