--- a/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
+++ b/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
@@ -29,12 +29,12 @@
             {
                 image = ProductController.ProductPhotoRootPath + "/" + product.ImageURL;
 
-                <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                    <div class="card">
+                @*<div class="col-lg-4 col-md-6 col-sm-12 mb-4">*@
+                    <div class="card col-lg-4 col-md-6 col-sm-12 m-1">
                         <a asp-action="Details" asp-route-id="@product.ID" asp-controller="Product">
-                            <img src="@image" class="card-img-top zoom-out zoom-effect" alt="@product.Name" style="object-fit: cover; height: 300px;">
+                            <img src="@image" class="card-img zoom-out zoom-effect" alt="@product.Name" style="object-fit: cover; ">
                         </a>
-                        <div class="card-body">
+                        <div class="card-body ">
                             <h5 class="card-title">@product.Name</h5>
                             <h5 class="card-title">@product.Price EGP</h5>
                             <p class="card-text">Type : @product.Category.Name</p>
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                @*</div>*@
             }
         </div>
     }
