--- a/E-CommerceWebApplication/Views/Product/Details.cshtml
+++ b/E-CommerceWebApplication/Views/Product/Details.cshtml
@@ -16,14 +16,13 @@
     </div>
     <div class="card-footer text-center justify-content-between">
         <a asp-action="index" asp-controller="Home" class="btn btn-primary">Home</a>
-        <a href="#" class="btn btn-primary">Out Source Link</a>
-        @*@if (User.IsInRole("Admin"))
-        {*@
+        @if (User.IsInRole("Admin"))
+        {
             <a asp-action="edit" asp-route-id="@Model.ID" class="btn btn-primary">Edit</a>
             <a asp-action="delete"
                onclick="return confirm('Are You Sure You Want To Delete @Model.Name ?')"
                asp-route-id="@Model.ID" class="btn btn-danger">Delete</a>
-        @*}*@
+        }
         
     </div>
 </div>
