--- a/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
+++ b/E-CommerceWebApplication/Views/Shared/ViewAllProducts.cshtml
@@ -19,7 +19,11 @@
 </h2>
 
 <hr />
-<a class="btn btn-outline-primary" asp-action="Create" asp-controller="Product">Add Product</a>
+@if (User.IsInRole("Admin"))
+{
+    <a class="btn btn-outline-primary" asp-action="Create" asp-controller="Product">Add Product</a>
+}
+
 
 <div class="mt-4">
     @if (Model.Any())
@@ -32,7 +36,7 @@
                 @*<div class="col-lg-4 col-md-6 col-sm-12 mb-4">*@
                     <div class="card col-lg-4 col-md-6 col-sm-12 ">
                         <a asp-action="Details" asp-route-id="@product.ID" asp-controller="Product">
-                            <img src="@image" class="card-img zoom-out zoom-effect" alt="@product.Name" style="object-fit: cover; ">
+                            <img src="@image" class="card-img zoom-out zoom-effect" alt="@product.Name" style="object-fit: cover;width:300px;height:300 ">
                         </a>
                         <div class="card-body ">
                             <h5 class="card-title">@product.Name</h5>
@@ -48,21 +52,26 @@
                                     <i class="bi bi-ticket-detailed"></i>
                                     Details
                                 </a>
+                            @if (User.IsInRole("Admin"))
+                            {
                                 <a asp-action="Edit" asp-controller="Product" asp-route-id="@product.ID" class="btn btn-outline-primary">
                                     <i class="bi bi-pencil"></i>
                                     Edit
                                 </a>
-                                @*<a asp-action="AddToCart" asp-controller="Cart" asp-route-id="@product.ID" class="btn btn-outline-primary">
-                                    <i class="bi bi-plus"></i>
-                                    Add To Cart
-                                </a>*@
-
                                 <a onclick="return confirm('Are you sure you want to delete the product @product.Name?')"
                                    class="btn btn-outline-danger"
                                    asp-action="Delete" asp-controller="Product" asp-route-id="@product.ID">
                                     <i class="bi bi-trash"></i>
                                     Delete
                                 </a>
+                            }
+                                
+                                @*<a asp-action="AddToCart" asp-controller="Cart" asp-route-id="@product.ID" class="btn btn-outline-primary">
+                                    <i class="bi bi-plus"></i>
+                                    Add To Cart
+                                </a>*@
+
+                                
                             </div>
                         </div>
                     </div>
