--- a/E-CommerceWebApplication/Views/Category/Index.cshtml
+++ b/E-CommerceWebApplication/Views/Category/Index.cshtml
@@ -17,33 +17,33 @@
         @foreach (var category in Model)
         {
             imagePath = CategoryController.CategoryPhotoRootPath + category.ImageURL;
-                <div class="card col-lg-4 col-md-6 col-sm-12 mb-4">
-                        <a asp-action="ViewAllProducts" asp-route-id="@category.Id">
-                            <img class="card-img zoom-out" src="@imagePath" alt="@category.Name" style="object-fit: cover; ">
-                        </a>
-                    <div class="card-body  ">
-                        <h3 class="card-title">@category.Name</h3>
-                        <p class="card-text">@category.Description</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="d-flex justify-content-between">
-                            <a asp-action="Details" asp-route-id="@category.Id" class="btn btn-outline-secondary">Details</a>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Actions
-                                </button>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" asp-action="ViewAllProducts" asp-route-id="@category.Id">View All</a>
-                                    @if (User.IsInRole("Admin"))
-                                    {
-                                        <a class="dropdown-item" asp-action="Edit" asp-route-id="@category.Id">Edit</a>
-                                        <a class="dropdown-item" asp-action="Delete" onclick="return confirm('Are you sure you want to delete @category.Name?')" asp-route-id="@category.Id">Delete</a>
-                                    }
-                                </div>
+            <div class="card col-lg-4 col-md-6 col-sm-12 mb-4">
+                <a asp-action="ViewAllProducts" asp-route-id="@category.Id">
+                    <img class="card-img zoom-out" src="@imagePath" alt="@category.Name" style="object-fit: cover; width: 350; height: 250px; ">
+                </a>
+                <div class="card-body  ">
+                    <h3 class="card-title">@category.Name</h3>
+                    <p class="card-text">@category.Description</p>
+                </div>
+                <div class="card-footer">
+                    <div class="d-flex justify-content-between">
+                        <a asp-action="Details" asp-route-id="@category.Id" class="btn btn-outline-secondary">Details</a>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Actions
+                            </button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" asp-action="ViewAllProducts" asp-route-id="@category.Id">View All</a>
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <a class="dropdown-item" asp-action="Edit" asp-route-id="@category.Id">Edit</a>
+                                    <a class="dropdown-item" asp-action="Delete" onclick="return confirm('Are you sure you want to delete @category.Name?')" asp-route-id="@category.Id">Delete</a>
+                                }
                             </div>
                         </div>
                     </div>
-                </div> 
+                </div>
+            </div>
         }
     </div>
 }
